--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "fb": "^2.0.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.3"
+    "mongoose": "^4.13.3",
+    "unirest": "^0.5.1"
   }
 }
