--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "fb": "^2.0.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.3"
+    "mongoose": "^4.13.3",
+    "unirest": "^0.5.1"
   }
 }
